--- a/Resources/Private/Templates/Be/Translator/DatabaseImportIndex.html
+++ b/Resources/Private/Templates/Be/Translator/DatabaseImportIndex.html
@@ -47,41 +47,48 @@
 
 <div>
     <h2><f:translate key="databaseImport.index.importHeadline" /></h2>
-    <f:form action="databaseImport" enctype="multipart/form-data" id="translator-import">
-			<div class="row row-cols-auto align-items-end g-3">
-				<div class="col">
-					<label for="files" class="form-label">Files [xlf, zip]</label>
-					<div class="input-group">
-						<button type="button" id="translator-fileupload-button" class="btn btn-default"><span class="t3js-icon icon icon-size-small icon-state-default icon-actions-upload" data-identifier="actions-upload">
-	<span class="icon-markup">
-<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 16 16"><g fill="currentColor"><path d="M10 11h1v1h-1zM12 11h1v1h-1zM11.27 6H4.73a.25.25 0 0 1-.188-.414l3.27-3.743a.244.244 0 0 1 .377 0l3.27 3.743A.25.25 0 0 1 11.27 6z"/><path d="M14.5 9H10v1h4v3H2v-3h4V9H1.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5z"/><path d="M7 6h2v4H7z"/></g></svg>
-	</span>
+	<f:if condition="{noAccess}">
+		<f:then>
+			Access denied.
+		</f:then>
+		<f:else>
+			<f:form action="databaseImport" enctype="multipart/form-data" id="translator-import">
+					<div class="row row-cols-auto align-items-end g-3">
+						<div class="col">
+							<label for="files" class="form-label">Files [xlf, zip]</label>
+							<div class="input-group">
+								<button type="button" id="translator-fileupload-button" class="btn btn-default"><span class="t3js-icon icon icon-size-small icon-state-default icon-actions-upload" data-identifier="actions-upload">
+			<span class="icon-markup">
+		<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 16 16"><g fill="currentColor"><path d="M10 11h1v1h-1zM12 11h1v1h-1zM11.27 6H4.73a.25.25 0 0 1-.188-.414l3.27-3.743a.244.244 0 0 1 .377 0l3.27 3.743A.25.25 0 0 1 11.27 6z"/><path d="M14.5 9H10v1h4v3H2v-3h4V9H1.5a.5.5 0 0 0-.5.5v4a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-.5-.5z"/><path d="M7 6h2v4H7z"/></g></svg>
+			</span>
 
-</span> Select &amp; upload files</button>
-						<div style="display: none;">
-						<f:form.upload name="data[files]" id="files" multiple="1" additionalAttributes="{accept: '.xlf, .zip'}" />
+		</span> Select &amp; upload files</button>
+								<div style="display: none;">
+								<f:form.upload name="data[files]" id="files" multiple="1" additionalAttributes="{accept: '.xlf, .zip'}" />
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<label for="language-uid" class="form-label">Lanugage UID</label>
+							<div class="input-group">
+								<f:form.textfield name="targetLanguageUid" class="form-control" id="language-uid" value="1" />
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col">
-					<label for="language-uid" class="form-label">Lanugage UID</label>
-					<div class="input-group">
-						<f:form.textfield name="targetLanguageUid" class="form-control" id="language-uid" value="1" />
+
+					<div class="mt-3" id="translator-fileupload-preview"></div>
+
+					<div  class="mt-3">
+						<button class="btn btn-default">
+							<span class="t3js-icon icon icon-size-small icon-state-default icon-apps-filetree-folder-default" data-identifier="actions-extension-import">
+							<span class="icon-markup">
+				<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 16 16"><g fill="currentColor"><path d="m7.501 5.97 3.33-1.19a.5.5 0 1 1 .337.94L8 6.854v3.704a.5.5 0 1 1-1 0V6.852L3.832 5.721a.5.5 0 0 1 .336-.942l3.333 1.19ZM8 13.914l-.029.011c-.265.111-.676.108-.934 0l-5.57-2.32A.806.806 0 0 1 1 10.91V4.102c0-.275.21-.588.468-.695l5.569-2.322c.266-.11.676-.107.934 0l5.562 2.322c.265.11.467.419.467.695V8h-1V4.252L7.504 2 2 4.252v6.507L7.504 13 8 12.798v1.117Zm7.007-1.898v-1.01h-2.009v-.998c-.052-.224-.255-.337-.412-.24l-3.081 1.449a.235.235 0 0 0 0 .398l3.08 1.59c.158.098.36-.015.413-.2v-.99h2.01Z"/></g></svg>
+							</span>
+							</span>
+							Import
+						</button>
 					</div>
-				</div>
-			</div>
-
-			<div class="mt-3" id="translator-fileupload-preview"></div>
-
-			<div  class="mt-3">
-				<button class="btn btn-default">
-					<span class="t3js-icon icon icon-size-small icon-state-default icon-apps-filetree-folder-default" data-identifier="actions-extension-import">
-					<span class="icon-markup">
-        <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 16 16"><g fill="currentColor"><path d="m7.501 5.97 3.33-1.19a.5.5 0 1 1 .337.94L8 6.854v3.704a.5.5 0 1 1-1 0V6.852L3.832 5.721a.5.5 0 0 1 .336-.942l3.333 1.19ZM8 13.914l-.029.011c-.265.111-.676.108-.934 0l-5.57-2.32A.806.806 0 0 1 1 10.91V4.102c0-.275.21-.588.468-.695l5.569-2.322c.266-.11.676-.107.934 0l5.562 2.322c.265.11.467.419.467.695V8h-1V4.252L7.504 2 2 4.252v6.507L7.504 13 8 12.798v1.117Zm7.007-1.898v-1.01h-2.009v-.998c-.052-.224-.255-.337-.412-.24l-3.081 1.449a.235.235 0 0 0 0 .398l3.08 1.59c.158.098.36-.015.413-.2v-.99h2.01Z"/></g></svg>
-					</span>
-					</span>
-					Import
-				</button>
-			</div>
-    </f:form>
+			</f:form>
+		</f:else>
+	</f:if>
 </div>
