--- a/Resources/Private/Templates/Be/Translator/Index.html
+++ b/Resources/Private/Templates/Be/Translator/Index.html
@@ -3,6 +3,9 @@
         xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
         xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
         data-namespace-typo3-fluid="true">
+<f:layout name="Module" />
+
+<f:section name="Content">
 <div>
     <f:if condition="{emptyStorage}">
         <f:then>
@@ -67,6 +70,7 @@
         </f:else>
     </f:if>
 </div>
+</f:section>
 <f:section name="setupStorage">
     <h1><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.missingStorage.headline" /></h1>
     <p><f:translate key="LLL:EXT:hd_translator/Resources/Private/Language/locallang.xlf:index.missingStorage.description" /></p>
