--- a/Resources/Public/Css/Backend/main.css
+++ b/Resources/Public/Css/Backend/main.css
@@ -46,8 +46,11 @@
 }
 .popup-content{
     position: absolute;
+    right: 0;
     padding: 10px;
-    width: 100%;
+    min-width: 100%;
+    width: max-content;
+    white-space: nowrap;
     border: 1px solid var(--bs-table-border-color);
     background-color: white;
     font-weight: 600;
@@ -63,6 +66,11 @@
 }
 .popup-content > div:first-child{
 	margin-top: 0px;
+}
+.import-upload-form{
+    display: flex;
+    flex-direction: column;
+    grid-gap: 5px;
 }
 .hd-translator-detail-grid{
     display: grid;
