Updated page export

--- a/Resources/Private/Templates/Be/Translator/Detail.html
+++ b/Resources/Private/Templates/Be/Translator/Detail.html
@@ -6,7 +6,7 @@
 <f:layout name="Module" />
 
 <f:section name="Content">
-    <f:asset.script identifier="hd_translator_list" src="EXT:hd_translator/Resources/Public/JavaScript/DetailAction.js" />
+    <f:asset.script identifier="hd_translator_detail" src="EXT:hd_translator/Resources/Public/JavaScript/DetailAction.js" />
 
     <div class="hd-translator">
         <f:if condition="{is_empty}">
