--- a/Resources/Private/Templates/Be/Translator/Database.html
+++ b/Resources/Private/Templates/Be/Translator/Database.html
@@ -1,26 +1,12 @@
-<f:asset.script identifier="translator-export-row">
-	<f:format.raw>
-		const sourceTemp = document.getElementById('source-temp');
-		const source = document.getElementById('source');
-		const targetTemp = document.getElementById('target-temp');
-		const target = document.getElementById('target');
+<html
+		xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+		xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+		xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+		data-namespace-typo3-fluid="true">
+<f:layout name="Module" />
 
-		sourceTemp.addEventListener('change', function(e) {
-		const value = this.value;
-		if (value != '') {
-		source.value = value;
-		this.value = '';
-		}
-		});
-		targetTemp.addEventListener('change', function(e) {
-		const value = this.value;
-		if (value != '') {
-		target.value = value;
-		this.value = '';
-		}
-		});
-	</f:format.raw>
-</f:asset.script>
+<f:section name="Content">
+	<f:asset.script identifier="hd_translator_database" src="EXT:hd_translator/Resources/Public/JavaScript/Database.js" />
 <div>
 	<h1>{f:translate(key: 'exportDatabase.headline')}</h1>
 	<div>
@@ -122,3 +108,5 @@
 		</f:form>
 	</div>
 </div>
+</f:section>
+</html>
