--- a/Resources/Private/Templates/Be/Translator/DatabaseImport.html
+++ b/Resources/Private/Templates/Be/Translator/DatabaseImport.html
@@ -1,15 +1,11 @@
 <html
-	xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-	xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
-	xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
-	data-namespace-typo3-fluid="true">
+		xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+		xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
+		xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
+		data-namespace-typo3-fluid="true">
+<f:layout name="Module" />
 
-<f:layout name="Default" />
-
-<f:section name="headline">
-</f:section>
-
-<f:section name="content">
+<f:section name="Content">
 	<div class="hd-translator">
 		<div>UPDATED: {actions.updated}</div>
 		<div>INSERTED: {actions.inserted}</div>
