Added possibility to disable export fields limitation

--- a/Resources/Private/Templates/Be/Translator/PageContentExport.html
+++ b/Resources/Private/Templates/Be/Translator/PageContentExport.html
@@ -94,6 +94,36 @@
 						</div>
 					</div>
 
+					<div class="row row-cols-auto align-items-end g-3 mt-3">
+						<div class="col">
+							<label for="subpages-checkbox" class="form-label">Ignore export fields limitation ('translator_export')</label>
+							<div class="input-group">
+								<div class="form-wizards-element">
+									<div class="form-check form-check-type-icon-toggle">
+										<f:form.checkbox name="ignoreExport" class="form-check-input" id="ignore-export-checkbox" value="1" />
+
+										<label class="form-check-label" for="ignore-export-checkbox">
+													<span class="form-check-label-icon">
+															<span class="form-check-label-icon-checked"><span class="t3js-icon icon icon-size-small icon-state-default icon-actions-check" data-identifier="actions-check">
+				<span class="icon-markup">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><g class="icon-color"><path d="M13.3 4.8l-.7-.7c-.2-.2-.5-.2-.7 0L6.5 9.5 4 6.9c-.2-.2-.5-.2-.7 0l-.6.7c-.2.2-.2.5 0 .7l3.6 3.6c.2.2.5.2.7 0l6.4-6.4c.1-.2.1-.5-.1-.7z"></path></g></svg>
+				</span>
+
+			</span></span>
+															<span class="form-check-label-icon-unchecked"><span class="t3js-icon icon icon-size-small icon-state-default icon-empty-empty" data-identifier="empty-empty">
+				<span class="icon-markup">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"></svg>
+				</span>
+
+			</span></span>
+													</span>
+										</label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 					<div  class="mt-3">
 						<button class="btn btn-default">
 					<span class="t3js-icon icon icon-size-small icon-state-default icon-apps-filetree-folder-default" data-identifier="actions-extension">
