--- a/Resources/Private/Templates/Be/Translator/Database.html
+++ b/Resources/Private/Templates/Be/Translator/Database.html
@@ -76,6 +76,36 @@
 
 			<div class="row row-cols-auto align-items-end g-3 mt-3">
 				<div class="col">
+					<label for="subpages-checkbox" class="form-label">Ignore export fields limitation ('translator_export')</label>
+					<div class="input-group">
+						<div class="form-wizards-element">
+							<div class="form-check form-check-type-icon-toggle">
+								<f:form.checkbox name="ignoreExport" class="form-check-input" id="ignore-export-checkbox" value="1" />
+
+								<label class="form-check-label" for="ignore-export-checkbox">
+													<span class="form-check-label-icon">
+															<span class="form-check-label-icon-checked"><span class="t3js-icon icon icon-size-small icon-state-default icon-actions-check" data-identifier="actions-check">
+				<span class="icon-markup">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><g class="icon-color"><path d="M13.3 4.8l-.7-.7c-.2-.2-.5-.2-.7 0L6.5 9.5 4 6.9c-.2-.2-.5-.2-.7 0l-.6.7c-.2.2-.2.5 0 .7l3.6 3.6c.2.2.5.2.7 0l6.4-6.4c.1-.2.1-.5-.1-.7z"></path></g></svg>
+				</span>
+
+			</span></span>
+															<span class="form-check-label-icon-unchecked"><span class="t3js-icon icon icon-size-small icon-state-default icon-empty-empty" data-identifier="empty-empty">
+				<span class="icon-markup">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"></svg>
+				</span>
+
+			</span></span>
+													</span>
+								</label>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="row row-cols-auto align-items-end g-3 mt-3">
+				<div class="col">
 					<label for="tables" class="form-label">{f:translate(key: 'exportDatabase.chooseTablesForExport')}</label>
 					<div class="input-group">
 						<f:form.select multiple="1" name="tables" id="tables" class="form-select" required="1">
